@@ -34,6 +34,27 @@ public class RemoteExceptionHandler {
   private RemoteExceptionHandler() {super();}
   
   /**
+   * Examine passed Throwable.  See if its carrying a RemoteException. If so,
+   * run {@link #decodeRemoteException(RemoteException)} on it.  Otherwise,
+   * pass back <code>t</code> unaltered.
+   * @param t Throwable to examine.
+   * @return Decoded RemoteException carried by <code>t</code> or
+   * <code>t</code> unaltered.
+   */
+  public static Throwable checkThrowable(final Throwable t) {
+    Throwable result = t;
+    if (t instanceof RemoteException) {
+      try {
+        result =
+          RemoteExceptionHandler.decodeRemoteException((RemoteException)t);
+      } catch (Throwable tt) {
+        result = tt;
+      }
+    }
+    return result;
+  }
+  
+  /**
    * Examine passed IOException.  See if its carrying a RemoteException. If so,
    * run {@link #decodeRemoteException(RemoteException)} on it.  Otherwise,
    * pass back <code>e</code> unaltered.
@@ -42,16 +63,8 @@ public class RemoteExceptionHandler {
    * <code>e</code> unaltered.
    */
   public static IOException checkIOException(final IOException e) {
-    IOException result = e;
-    if (e instanceof RemoteException) {
-      try {
-        result = RemoteExceptionHandler.decodeRemoteException(
-            (RemoteException) e);
-      } catch (IOException ex) {
-        result = ex;
-      }
-    }
-    return result;
+    Throwable t = checkThrowable(e);
+    return t instanceof IOException? (IOException)t: new IOException(t);
   }
   
   /**
